--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -184,14 +184,18 @@ a {
   color: #ff33cc;
 }
 
-.table-row {
-  display: table;
+.capability-row {
   width: 100%;
   margin-bottom: 60px;
+  display: inline-block;
+}
 
-  .table-cell {
-    display: table-cell;
-  }
+.u-float-left {
+  float: left;
+}
+
+.u-float-right {
+  float: right;
 }
 
 
